# shelf

./: .env  .env.example  .gitignore  .token  README.md  docker-compose.yml  render.yaml  testfile.txt
.github/workflows/: deploy.yml
backend/: .env  .env.example  Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_initial_tables.rs
backend/migrations/: 20240000000000_create_initial_tables.sql  20240223_create_documents_table.sql
backend/postman/: PdfShelf.postman_collection.json  PdfShelf_API.postman_collection.json  PdfShelf_AP_postman_collectionv2.json
backend/src/: error.rs  lib.rs  main.rs
backend/src/config/: app_config.rs  database.rs
backend/src/handlers/: auth.rs  document.rs  mod.rs  payment.rs  pdf.rs  subscription.rs
backend/src/middleware/: auth.rs  user_id.rs
backend/src/models/: document.rs  mod.rs  payment.rs  pdf.rs  subscription.rs  user.rs
backend/src/services/: document.rs  mod.rs  payment.rs  storage.rs  subscription.rs
backend/test-api/: .token  test_api.sh  test_subscription.sh
deploy/: CLI_DEPLOYMENT.md  RENDER_YAML_EXPLAINED.md  SECRETS_SETUP.md
docker/minio/: init.sh
docker/postgres/: init.sql
docs/: api-documentation.md  mtn_integration.md  shelf-specification.md  todo.md
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  routes.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/documents/: FileUploader.tsx  PDFThumbnail.tsx  PDFViewer.tsx
frontend/src/components/layouts/: Footer.tsx  InitialLoader.tsx  MainLayout.tsx
frontend/src/components/theme/: ThemeToggle.tsx
frontend/src/components/ui/: loading-overlay.tsx  sonner.tsx  spinner.tsx
frontend/src/contexts/: AuthContext.tsx  DocumentContext.tsx  LoadingContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Index.tsx  Login.tsx  Payment.tsx  Register.tsx  Subscription.tsx  ViewPDF.tsx
frontend/src/services/: api.ts
scripts/: deploy.sh
