[package]
name = "pdf-shelf"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
jsonwebtoken = "9.1"
bcrypt = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
actix-web-httpauth = "0.8"

aws-config = "1.6.1"
aws-sdk-s3 = {version = "1.82.0", features =  ["behavior-version-latest"]}
aws-types = "1.3.6"
aws-credential-types = "1.1"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
rusoto_s3 = "0.48.0"
futures = "0.3"  # Add this line for futures
