[package]
name = "pdf-shelf"

[workspace]
members = ["migration"] # Ensures the migration crate is part of the workspace
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0" # Upgraded
actix-multipart = "0.7.2" # Upgraded
actix-web-httpauth = "0.8"
sea-orm = { version = "1.1.12", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
sea-orm-migration = { version = "1.1.12", features = [ "runtime-actix-native-tls", "sqlx-postgres" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "io-util", "time"] } # Upgraded, slimmed features
aws-sdk-s3 = "1.92.0" # Aligned to stable release
aws-config = "1.8.0" # Aligned
# Removed aws-types and aws-smithy-types unless explicitly needed
tokio-util = { version = "0.7.15", features = ["io"] } # Upgraded
uuid = { version = "1.17.0", features = ["v4", "serde"] } # Upgraded
futures-util = "0.3"
sanitize-filename = "0.6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
derive_more = { version = "2.0.1", features = ["from", "into", "display", "error"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
bytes = "1.7.1" # Upgraded
mtnmomo = "0.1.3"
actix-cors = "0.7.1"
rust_decimal = "1.37.2"
migration = { path = "./migration" }